Fixing overlap of elements with sidebar is long and page is short
Fixes #462

--- a/src/sass/mixins/_tab-sidebar.scss
+++ b/src/sass/mixins/_tab-sidebar.scss
@@ -17,6 +17,9 @@
 		right: $main-padding/2;
 		top: 0;
 
+		// Bottom margin puhses it off of the form-actions fixed bar
+		margin-bottom: $footer-height + $main-padding;
+
 		// Otherwise, fixed position never takes
 		&.affix {
 			position: fixed;
@@ -93,10 +96,13 @@
 
 		// Make full width
 		.tab-sidebar {
-			position: static;
 			width: auto;
 			padding: $main-padding/2;
-			padding-top: 0;
+			margin-bottom: 0;
+
+			// Override affixable
+			padding-top: 0 !important;
+			position: static !important;
 		}
 
 		// Make locale not span full width
